Add getResourceMetadata endpoint
